tests/unit-fail/at_quick_exit-bad2.ref
Error: UB-STDLIB5
Description: Called the quick_exit function more than once (from a call to at_quick_exit).
Type: Undefined behavior.
See also: C11 sec. 7.22.4.7:2, J.2:1 item 182
  at quick_exit(at_quick_exit-bad2.c:4)
  at foo(at_quick_exit-bad2.c:4)
  at exit(at_quick_exit-bad2.c:9)
  at main(at_quick_exit-bad2.c:9)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
